--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@sweetalert2/ngx-sweetalert2": "^13.0.0",
     "express": "^4.18.2",
     "flowbite": "^3.1.1",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
