--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "src/styles.scss"
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
+              "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": ["node_modules/flowbite/dist/flowbite.min.js"],
             "server": "src/main.server.ts",
