--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/ssr": "^19.0.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@sweetalert2/ngx-sweetalert2": "^13.0.0",
+    "aos": "^2.3.4",
     "express": "^4.18.2",
     "flowbite": "^3.1.2",
     "jwt-decode": "^4.0.0",
+    "ng-animate": "^2.0.1",
     "ngx-owl-carousel-o": "^19.0.0",
     "ngx-spinner": "^17.0.0",
     "ngx-toastr": "^19.0.0",
